@@ -9,6 +9,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## 4.0.11 - 2025-09-14
 ### Fixed
 - Checking "not not expire" on invoices wasn't saving.
+- Accept new registrations is only set manually by admin, not automatically. We only check for course participants
+  number
 
 
 ## 4.0.10 - 2025-08-29
